<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    >
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/twister_image"
        android:layout_width="158dp"
        android:layout_height="158dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_white_background"
        android:src="@drawable/image_twister" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView2"
        android:layout_width="64dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_toEndOf="@id/twister_image"
        android:background="@drawable/rounded_white_background"
        android:src="@drawable/kfc_logo_2018_now" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading_1"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/kfc_mashtots"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_bold"
        android:layout_toEndOf="@id/imageView2"
        android:layout_marginTop="@dimen/_20dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/twister"
        android:textColor="@color/white"
        android:layout_below="@id/imageView2"
        android:layout_toEndOf="@id/twister_image"
        android:layout_marginStart="@dimen/_20dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/price_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_toEndOf="@id/twister_image"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/_1150"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sp"
        android:layout_marginTop="@dimen/_140dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/price_valute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amd"
        android:textSize="@dimen/_16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/price_number"
        android:layout_marginTop="@dimen/_150dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/twister_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/twister_description"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/twister_image"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/twister_type"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/twister_description"
        />
    <RadioGroup
        android:id="@+id/type_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/twister_type"
        android:layout_marginStart="@dimen/_15dp"
        >
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/type_spicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_spicy"
            android:checked="true"

            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:theme="@style/my_radio_button"
            />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/type_original"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/type_original"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:theme="@style/my_radio_button"
            />
    </RadioGroup>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/twister_havelum"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/havelum"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/type_choice"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cheese1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/cheese_slice_1"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_regular"
        android:theme="@style/my_check_box"
        android:checked="true"
        android:layout_below="@id/twister_havelum"
        android:layout_marginStart="@dimen/_15dp"
        />
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cheese2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/cheese_slice_2"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_regular"
        android:theme="@style/my_check_box"
        android:layout_below="@id/cheese1"
        android:layout_marginStart="@dimen/_15dp"
        />
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cheese3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/cheese_slice_3"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_regular"
        android:theme="@style/my_check_box"
        android:layout_below="@id/cheese2"
        android:layout_marginStart="@dimen/_15dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cheese_price1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/price_cheese_1"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_regular"
        android:layout_below="@id/twister_havelum"
        android:layout_toEndOf="@id/cheese1"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginStart="@dimen/_180dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cheese_price2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/price_cheese_2"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_regular"
        android:layout_below="@id/cheese1"
        android:layout_toEndOf="@id/cheese2"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginStart="@dimen/_180dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cheese_price3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/price_cheese_3"
        android:textColor="@color/white"
        android:layout_below="@id/cheese2"
        android:layout_toEndOf="@id/cheese3"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginStart="@dimen/_180dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/comment_box"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/cheese3"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#212121"
        android:gravity="top"
        android:hint="@string/comment_order_placeholder"
        android:padding="8dp"
        android:textColorHint="#a1a1a1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_to_cart"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@id/comment_box"
        android:layout_marginHorizontal="@dimen/_80dp"
        android:background="@drawable/rounded_red_background"
        android:fontFamily="@font/roboto_bold"
        android:paddingHorizontal="80dp"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_10dp"/>
</RelativeLayout>