<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="@dimen/_340dp"
        android:layout_height="@dimen/_60dp"
        style="@style/textViewStyle1"
        android:text="@string/textView1"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id = "@+id/textView2"
        style="@style/textViewStyle2"
        android:layout_width="@dimen/_340dp"
        android:layout_height="@dimen/_60dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/textView2"
        android:layout_gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/_35dp"
        android:layout_marginTop="@dimen/_10dp"
        >
        <TextView
            android:id="@+id/textView3"
            style="@style/textViewStyle3"
            android:layout_width="@dimen/_150dp"
            android:layout_height="@dimen/_150dp"
            android:text="@string/textView3"
            android:layout_gravity="top"
            android:layout_marginEnd="@dimen/_40dp"
            />
        <TextView
            android:id="@+id/textView4"
            style="@style/textViewStyle4"
            android:text="@string/textView4"
            android:layout_width="@dimen/_150dp"
            android:layout_height="@dimen/_150dp"/>
    </LinearLayout>
</LinearLayout>