<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101010"
    >
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/push_nots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3a3a3a"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/push_notifications"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"
        android:text="@string/preferences"
        android:drawableEnd="@drawable/right_arrow"
        android:layout_below="@id/push_nots"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/match_alerts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/preferences"
        android:layout_marginTop="16dp"
        android:text="@string/match_alerts"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="@dimen/_15dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/match_alerts_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#3a3a3a"
        android:layout_marginTop="4dp"
        android:textSize="12sp"
        android:text="@string/match_alerts_2"
        android:layout_below="@id/match_alerts"
        android:layout_marginStart="@dimen/_15dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/football"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"
        android:text="@string/football"
        android:drawableStart="@drawable/white_football"
        android:drawableEnd="@drawable/right_arrow"
        android:drawablePadding="8dp"
        android:layout_below="@id/match_alerts_2"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tennis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"
        android:text="@string/tennis"
        android:drawableStart="@drawable/white_tennis"
        android:drawableEnd="@drawable/right_arrow"
        android:drawablePadding="8dp"
        android:layout_below="@id/football"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/basketball"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"
        android:text="@string/basketball"
        android:drawableStart="@drawable/white_basketball"
        android:drawableEnd="@drawable/right_arrow"
        android:drawablePadding="8dp"
        android:layout_below="@id/tennis"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hockey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"
        android:text="@string/hockey"
        android:drawableStart="@drawable/white_hockey"
        android:drawableEnd="@drawable/right_arrow"
        android:drawablePadding="8dp"
        android:layout_below="@id/basketball"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cricket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"
        android:text="@string/cricket"
        android:drawableStart="@drawable/white_cricket"
        android:drawableEnd="@drawable/right_arrow"
        android:drawablePadding="8dp"
        android:layout_below="@id/hockey"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/in_app_nots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3a3a3a"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/in_app_notifis"
        android:layout_below="@id/cricket"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fav_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:text="@string/fav_match"
        android:layout_below="@id/in_app_nots"
        android:layout_marginStart="@dimen/_15dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fav_league"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:text="@string/fav_league"
        android:layout_below="@id/fav_match"
        android:layout_marginStart="@dimen/_15dp"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/match_alerts_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/preferences"
        android:layout_marginStart="@dimen/_210dp"
        android:layout_toEndOf="@id/match_alerts"
        android:checked="true"
        android:theme="@style/my_switch"
        android:layout_marginTop="@dimen/_5dp"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/fav_match_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/in_app_nots"
        android:layout_marginStart="@dimen/_180dp"
        android:layout_toEndOf="@id/fav_match"
        android:checked="true"
        android:theme="@style/my_switch"
        android:layout_marginTop="@dimen/_5dp"
        />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/fav_league_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:theme="@style/my_switch"
        android:layout_below="@id/fav_match"
        android:layout_toEndOf="@id/fav_league"
        android:layout_marginStart="@dimen/_172dp"
        android:layout_marginTop="@dimen/_5dp"
        />
</RelativeLayout>